# hksel

./: .gitignore  .gitmodules  LICENSE.txt  README.md
docs/: INDEXING.md  INDEXING.rmd  QA.md  QA.rmd  README.md  README.rmd
docs/krita/: ctrl+shift.kra  press_any_key.kra
src/: CMakeLists.txt  keyboardmanager.h  main.cpp  windowmanager.cpp  windowmanager.h
src/config/: Config.h  ConfigBuilder.h  ConfigManager.cpp  ConfigManager.h
src/exceptions/: OutOfBounds.h
src/gui/: HotkeyPickerDrawer.cpp  HotkeyPickerDrawer.h  Shape.h  WindowManager.cpp  WindowManager.h  dimensions.h  windowmanager.h
src/gui/drawer/: RectangleShapeDrawer.cpp  RectangleShapeDrawer.h  ShapeDrawer.h  ShapeDrawerFactory.cpp  ShapeDrawerFactory.h
src/hotkey/: hotkey.h  hotkeyloader_yaml.h
src/input/: KeyboardManager.cpp  KeyboardManager.h  keyboardmanager.cpp  x11_keycodes.h
src/input/handler/: InputHandler.cpp  InputHandler.h  InputHandlerFactory.cpp  InputHandlerFactory.h  InputMode.h  InputState.h  SelectionInputHandler.cpp  SelectionInputHandler.h
src/input/handler/filters/: FilteringInputHandler.cpp  FilteringInputHandler.h  KeyFilteringInputHandler.cpp  KeyFilteringInputHandler.h  TextFilteringInputHandler.cpp  TextFilteringInputHandler.h
src/input/handler/instruction/: FilterInstruction.h  InputInstruction.cpp  InputInstruction.h  InputInstructionType.h  Instruction.h  InstructionType.h  ModeChangeInstruction.h  MoveInputInstruction.h  MoveInstruction.h
src/lib/keycode/: CMakeLists.txt  keycode.cpp  keycode.h
src/tools/parsers/: i3_config_parser.py
src/tools/xeventprinter/: CMakeLists.txt  main.cpp
static/: i3.yaml  sample.yaml  sampleconfig.yaml
static/conf.d/: i3.yaml  sampleconfig.yaml
